# mustang

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
c-gull/: COPYRIGHT  Cargo.toml  README.md
c-gull/src/: lib.rs  nss.rs  printf.rs  rand48.rs  resolve.rs  strtod.rs  strtol.rs  sysconf.rs  termios.rs  time.rs  use_libc.rs  utmp.rs
c-scape/: Cargo.toml  README.md  build.rs
c-scape/aarch64_outline_atomics/: README.md  aarch64_outline_atomics.s
c-scape/aarch64_outline_atomics/aarch64_outline_atomics/: Cargo.toml
c-scape/aarch64_outline_atomics/aarch64_outline_atomics/src/: lib.rs
c-scape/src/: allocator.rs  at_fork.rs  c.rs  environ.rs  err_check.rs  errno_.rs  error_str.rs  exec.rs  exit.rs  glibc_versioning.rs  lib.rs  m.rs  nss.rs  posix_spawn.rs  process_.rs  pthread.rs  rand.rs  rand48.rs  rand_.rs  raw_mutex.rs  setjmp.rs  sync_ptr.rs  syscall.rs  unwind.rs  use_libc.rs
c-scape/src/ctype/: mod.rs
c-scape/src/ctype/lsb_abi/: ctype_b_loc.rs  ctype_tolower_loc.rs  ctype_toupper_loc.rs  mod.rs
c-scape/src/data/: linux_gnu.rs  mod.rs
c-scape/src/env/: mod.rs
c-scape/src/fs/: access.rs  chmod.rs  dirfd.rs  fadvise.rs  fcntl.rs  inotify.rs  link.rs  lseek.rs  mkdir.rs  mknod.rs  mod.rs  open.rs  opendir.rs  readlink.rs  realpath.rs  remove.rs  rename.rs  sendfile.rs  stat.rs  symlink.rs  sync.rs  truncate.rs  utime.rs  xattr.rs
c-scape/src/fs/dir/: dirfd.rs  mod.rs  opendir.rs  readdir.rs
c-scape/src/io/: dup.rs  epoll.rs  isatty.rs  mod.rs  pipe.rs  poll.rs  read.rs  splice.rs  timerfd.rs  write.rs
c-scape/src/malloc/: mod.rs
c-scape/src/math/: mod.rs
c-scape/src/mem/: bstring.rs  mod.rs  string.rs
c-scape/src/mmap/: mod.rs
c-scape/src/net/: inet.rs  mod.rs
c-scape/src/process/: chdir.rs  chroot.rs  egid.rs  euid.rs  exec.rs  getcwd.rs  gid.rs  groups.rs  kill.rs  mod.rs  pid.rs  priority.rs  rlimit.rs  sid.rs  system.rs  uid.rs  umask.rs  utmp.rs  wait.rs
c-scape/src/rand/: mod.rs
c-scape/src/signal/: mod.rs
c-scape/src/termios/: mod.rs
c-scape/src/termios_/: mod.rs
c-scape/src/threads/: key.rs  mod.rs
c-scape/src/time/: mod.rs
example/: Cargo.toml
example-crates/mustang-custom-allocator/: Cargo.toml  README.md
example-crates/mustang-custom-allocator/src/: main.rs
example-crates/mustang-example/: Cargo.toml  README.md
example-crates/mustang-example-lto/: Cargo.toml  README.md
example-crates/mustang-example/src/: main.rs
example-crates/mustang-nostd/: Cargo.toml  README.md
example-crates/mustang-nostd/src/: main.rs
example/src/: main.rs
example/tests/: tests.rs
examples/: empty.rs  env.rs  fs.rs  hello.rs  net-addr.rs  net-ip.rs  net-tcp.rs  net-udp.rs  rust-by-example-threads.rs  test-args.rs  test-backtrace.rs  test-ctor.rs  test-environ.rs  test-initialize-c-runtime.rs  test-simd.rs  test-tls-dtors.rs  test-tls.rs  test-workdir.rs  time.rs
examples/net/: mod.rs
examples/sys_common/: mod.rs
initialize-c-runtime/: Cargo.toml  README.md  build.rs
initialize-c-runtime/c/: hello-c-world.c  initialize-c-runtime.c
initialize-c-runtime/src/: lib.rs
mustang/: COPYRIGHT  Cargo.toml  README.md  build.rs
mustang/empty/: README.md  empty.s
mustang/src/: allocator.rs  lib.rs
mustang/target-specs/: aarch64-mustang-linux-gnu.json  armv5te-mustang-linux-gnueabi.json  i686-mustang-linux-gnu.json  riscv64gc-mustang-linux-gnu.json  x86_64-mustang-linux-gnu.json
origin/: COPYRIGHT  Cargo.toml  README.md
origin/src/: allocator.rs  arch-aarch64.rs  arch-arm.rs  arch-riscv64.rs  arch-x86.rs  arch-x86_64.rs  entry.rs  lib.rs  mutex.rs  process.rs  program.rs  raw_mutex.rs  signal.rs  threads.rs  threads_via_pthreads.rs  wasi_mutex.rs
origin/src/sync/: condvar.rs  futex.rs  futex_rwlock.rs  mod.rs  wait_wake.rs
specs/: aarch64-mustang-linux-gnu.json  aarch64-unknown-linux-mustang.json  armv5te-mustang-linux-gnueabi.json  i686-mustang-linux-gnu.json  i686-unknown-linux-mustang.json  riscv64gc-mustang-linux-gnu.json  riscv64gc-unknown-linux-mustang.json  x86_64-mustang-linux-gnu.json  x86_64-unknown-linux-mustang.json
src/: lib.rs
target-specs/: aarch64-mustang-linux-gnu.json  armv5te-mustang-linux-gnueabi.json  i686-mustang-linux-gnu.json  riscv64gc-mustang-linux-gnu.json  x86_64-mustang-linux-gnu.json
test-crates/libc-replacement/: Cargo.toml  README.md
test-crates/libc-replacement/src/: main.rs
test-crates/mustang-macro-does-nothing/: Cargo.toml  README.md
test-crates/mustang-nostd/: Cargo.toml  README.md
test-crates/mustang-nostd/src/: main.rs
test-crates/origin-as-just-a-library/: Cargo.toml  README.md
test-crates/origin-as-just-a-library/src/: main.rs
tests/: env.rs  examples.rs  fs.rs  integration-create_dir_all_bare.rs  integration-env.rs  integration-thread.rs  kernel_copy.rs  lazy.rs  net-addr.rs  net-ip.rs  net-tcp.rs  net-udp.rs  panic.rs  process-common.rs  process-unix.rs  process.rs  sync-barrier.rs  sync-condvar.rs  sync-lazy_lock.rs  sync-mpsc-sync.rs  sync-mpsc.rs  sync-mutex.rs  sync-once.rs  sync-once_lock.rs  sync-rwlock.rs  tests.rs  thread-local.rs  thread.rs  time.rs
tests/common/: mod.rs
tests/net/: test.rs
tests/sys_common/: io.rs
wasi-libc-bottom-half-build/: Cargo.toml  libwasi_libc.symbols
wasi-libc-bottom-half-build/src/: main.rs
wasi-libc-bottom-half-staticlib/: Cargo.toml  README.md
wasi-libc-bottom-half-staticlib/src/: lib.rs
