[package]
name = "mustang"
version = "0.13.2"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Rust programs written entirely in Rust"
documentation = "https://docs.rs/mustang"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2021"
exclude = ["/.github"]

[target.'cfg(target_vendor = "mustang")'.dependencies]
c-gull = { version = "0.14.5", default-features = false, features = ["take-charge", "call-main", "malloc-via-crates", "define-mem-functions"] }

[dev-dependencies]
similar-asserts = "1.1.0"
rand = "0.8.4"
libc = "0.2.138"
cfg-if = "1.0.0"
rand_xorshift = "0.3.0"

# Test that the ctor crate works under mustang.
ctor = "0.2.0"

# Check if rustup is installed for tests
which = "4.4.0"

# Test that the core_simd crate works under mustang.
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[features]
default = ["thread", "std"]
thread = ["c-gull/thread"]
env_logger = ["c-gull/env_logger"]
log = ["c-gull/log"]
max_level_off = ["c-gull/max_level_off"]
std = ["c-gull/std"]

# Enable highly experimental support for performing startup-time relocations,
# needed to support statically-linked PIE executables.
experimental-relocate = ["c-gull/experimental-relocate"]
