[package]
name = "c-gull"
version = "0.6.1"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "A libc implementation in Rust"
documentation = "https://docs.rs/c-gull"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2021"

[dependencies]
# We use the libc crate for C ABI types and constants, but we don't depend on
# the actual platform libc.
libc = { version = "0.2.138", default-features = false }
c-scape = { path = "../c-scape", version = "0.6.1", default-features = false }
errno = { version = "0.2.8", default-features = false, optional = true }
tz-rs = { version = "0.6.11", optional = true }
printf-compat = { version = "0.1.1", optional = true }
sync-resolve = { version = "0.3.0", optional = true }
log = { version = "0.4.14", default-features = false, optional = true }
rustix = { version = "0.36.1", default-features = false, optional = true, features = ["fs", "itoa", "net", "param", "process", "rand", "termios", "thread", "time"] }

[dev-dependencies]
libc = "0.2.138"

[features]
default = ["threads", "std"]
threads = ["c-scape/threads"]
std = ["c-scape/std", "rustix", "log", "printf-compat", "tz-rs", "errno", "sync-resolve"]
