[package]
name = "c-scape"
version = "0.3.1-alpha.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "libc-like ABI wrapper"
documentation = "https://docs.rs/c-scape"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2018"

[dependencies]
libm = "0.2.1"
rustix = { version = "0.29.1", default-features = false }
memoffset = "0.6"
realpath-ext = { version = "0.1.0", default-features = false }
memchr = { version = "2.4.1", default-features = false }
sync-resolve = { version = "0.3.0", optional = true }
origin = { path = "../origin", default-features = false, version = "^0.3.1-alpha.0"}
parking_lot = { version = "0.11.2", optional = true }
log = { version = "0.4.14", default-features = false }

# When requested, check against libc signatures.
[target.'cfg(mustang_use_libc)'.dependencies]
libc = "0.2.99"

[build-dependencies]
# Enable the cc dependency to build aarch64_outline_atomics from source
# instead of using the prebuilt libraries.
cc = { version = "1.0.68", optional = true }

[dev-dependencies]
libc = "0.2.99"
static_assertions = "1.1.0"
paste = "1.0.5"
once_cell = "1.8.0"

[features]
default = ["threads", "resolve"]
threads = ["origin/threads", "parking_lot"]
resolve = ["sync-resolve", "std"]
std = ["rustix/std"]
