[package]
name = "c-scape"
version = "0.6.1"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "A libc bottom-half implementation in Rust"
documentation = "https://docs.rs/c-scape"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2021"

[dependencies]
libm = "0.2.1"
rustix = { version = "0.36.1", default-features = false, features = ["fs", "itoa", "net", "param", "process", "rand", "termios", "thread", "time"] }
memoffset = "0.8.0"
realpath-ext = { version = "0.1.0", default-features = false }
origin = { path = "../origin", default-features = false, version = "^0.6.1" }
log = { version = "0.4.14", default-features = false }
# We use the libc crate for C ABI types and constants, but we don't depend on
# the actual platform libc.
libc = { version = "0.2.138", default-features = false }
errno = { version = "0.2.8", default-features = false }
rand_pcg = "0.3.1"
rand_core = "0.6.4"
rand = { version = "0.8.5", default-features = false }

[build-dependencies]
# Enable the cc dependency to build aarch64_outline_atomics from source
# instead of using the prebuilt libraries.
cc = { version = "1.0.68", optional = true }

[dev-dependencies]
libc = "0.2.138"
static_assertions = "1.1.0"
paste = "1.0.5"
once_cell = "1.8.0"

[features]
default = ["threads", "std"]
threads = ["origin/threads", "origin/set_thread_id"]
std = ["rustix/std"]
