[package]
name = "c-scape"
version = "0.11.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "A libc bottom-half implementation in Rust"
documentation = "https://docs.rs/c-scape"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2021"

[dependencies]
libm = "0.2.1"
rustix = { version = "0.38.10", default-features = false, features = ["event", "fs", "itoa", "mm", "net", "param", "pipe", "process", "rand", "runtime", "stdio", "system", "termios", "thread", "time"] }
rustix-futex-sync = { version = "0.1.1", features = ["atomic_usize"] }
memoffset = "0.9.0"
realpath-ext = { version = "0.1.0", default-features = false }
origin = { version = "0.13.0", default-features = false, features = ["thread", "init-fini-arrays"] }
log = { version = "0.4.14", default-features = false }
# We use the libc crate for C ABI types and constants, but we don't depend on
# the actual platform libc.
libc = { version = "0.2.138", default-features = false }
errno = { version = "0.3.3", default-features = false }
rand_pcg = "0.3.1"
rand_core = "0.6.4"
rand = { version = "0.8.5", default-features = false }

[dev-dependencies]
libc = "0.2.138"
static_assertions = "1.1.0"
paste = "1.0.5"
once_cell = "1.8.0"

[features]
default = ["threads", "std"]
threads = ["origin/set_thread_id"]
std = ["rustix/std"]

# One of the following two features must be enabled:

# Enable this to tell c-scape to take control of the process.
take-charge = ["origin/origin-start", "origin/origin-thread", "origin/origin-signal", "origin/origin-program"]

# Enable this to tell c-scape to let a libc be in control of
# the process.
coexist-with-libc = ["origin/libc"]
