[package]
name = "example"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
mustang = { path = ".." }

# Test that the ctor crate works under mustang.
ctor = "0.1.21"
# Test that the core_simd crate works under mustang.
# TODO: Re-enable this when core_simd works on Rust nightly.
#core_simd = { git = "https://github.com/rust-lang/portable-simd" }
