[package]
name = "mustang"
version = "0.13.1"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Rust programs written entirely in Rust"
documentation = "https://docs.rs/mustang"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2021"

[target.'cfg(target_vendor = "mustang")'.dependencies]
origin = { version = "0.13.0", default-features = false }
c-gull = { version = "0.14.4", default-features = false, features = ["take-charge", "call-main", "malloc-via-rust-global-alloc", "define-mem-functions"] }

# A general-purpose `global_allocator` implementation.
rustix-dlmalloc = { version = "0.1.0", features = ["global"], optional = true }
# A small `global_allocator` implementation.
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["default-alloc", "thread", "std"]
default-alloc = ["rustix-dlmalloc"]
thread = ["c-gull/thread"]
env_logger = ["origin/env_logger"]
log = ["origin/log"]
max_level_off = ["origin/max_level_off"]
std = ["c-gull/std"]
