[package]
name = "origin"
version = "0.1.1-alpha.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Program startup and thread support written in Rust"
documentation = "https://docs.rs/origin"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2018"

[dependencies]
linux-raw-sys = { version = "0.0.29", features = ["v5_4", "v5_11"] }
rsix = "0.24.0"
bitflags = "1.3.0"
once_cell = "1.8.0"
log = "0.4.14"
memoffset = "0.6.4"

[target.'cfg(not(target_vendor = "mustang"))'.dependencies]
libc = "0.2.101"

# Optional logging backend. You can use any external logger, but using this
# feature allows origin to initialize the logger before main, so that you can
# see the log messages emitted before main is called.
env_logger = { version = "0.9.0", optional = true }

[features]
default = ["threads"]

# Support for threads.
threads = []

# Disable logging.
max_level_off = ["log/max_level_off"]
