[package]
name = "origin"
version = "0.3.1-alpha.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Program startup and thread support written in Rust"
documentation = "https://docs.rs/origin"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2018"

[dependencies]
linux-raw-sys = { version = "0.0.36", default-features = false, features = ["v5_4", "v5_11", "no_std"] }
rustix = { version = "0.28.0", default-features = false }
bitflags = "1.3.0"
log = { version = "0.4.14", default-features = false }
memoffset = "0.6.4"
lock_api = "0.4"
dlmalloc = "0.2"

[target.'cfg(not(target_vendor = "mustang"))'.dependencies]
libc = "0.2.101"

# Optional logging backend. You can use any external logger, but using this
# feature allows origin to initialize the logger before main, so that you can
# see the log messages emitted before main is called.
env_logger = { version = "0.9.0", optional = true }

[features]
default = ["threads"]

# Support for threads.
threads = []

# Disable logging.
max_level_off = ["log/max_level_off"]
