[package]
name = "wasi-libc-bottom-half-build"
version = "0.3.1-alpha.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "WASI libc bottom-half build"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2018"
publish = false
