[package]
name = "wasi-libc-bottom-half-staticlib"
version = "0.3.1-alpha.0"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "WASI libc bottom half staticlib"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/mustang"
edition = "2018"
publish = false

[dependencies]
origin = { path = "../origin", default-features = false, version = "^0.3.1-alpha.0"}
c-scape = { path = "../c-scape", version = "^0.3.1-alpha.0", default-features = false }
wee_alloc = "0.4"

[lib]
crate-type = ["staticlib"]
