[package]
name = "mustang-custom-allocator"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The mustang crate provides the `can_run_this!()` macro.
mustang = { path = "../.." }
rustix-dlmalloc = { version = "0.1.0", features = ["global"] }

[workspace]
