[package]
name = "mustang-nostd"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The mustang crate provides the `can_run_this!()` macro.
mustang = { path = "../..", default-features = false, features = ["thread"] }
rustix-dlmalloc = { version = "0.1.0", features = ["global"] }

[workspace]

# TODO: Remove this workaround when
# https://github.com/llvm/llvm-project/pull/105513
# makes it into the Rust compiler.
[profile.dev.package.unwinding]
debug = false
