[package]
name = "libc-replacement"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Ordinarily, one would use libc like this:
#libc = "0.2"

# But in this example, we use c-scape instead of libc:
libc = { path = "../../c-scape", package = "c-scape" }

# This is just an example crate, and not part of the mustang workspace.
[workspace]
