[package]
name = "libc-replacement"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Ordinarily, one would use libc like this:
#libc = "0.2"

# But in this example, we use c-gull instead of libc:
libc = { path = "../../c-gull", features = ["coexist-with-libc"], package = "c-gull" }

# This is just an example crate, and not part of the mustang workspace.
[workspace]
