[package]
name = "mustang-nostd"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The mustang crate provides the `can_run_this!()` macro.
mustang = { path = "../..", default-features = false, features = ["thread", "default-alloc"] }

[workspace]
